parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> statement_list
Rule 2     statement_list -> statement
Rule 3     statement_list -> statement_list statement
Rule 4     statement -> expression_statement
Rule 5     statement -> block_statement
Rule 6     statement -> var_declaration
Rule 7     statement -> if_statement
Rule 8     statement -> for_statement
Rule 9     statement -> while_statement
Rule 10    statement -> print_statement
Rule 11    statement -> func_declaration
Rule 12    statement -> return_statement
Rule 13    expression_statement -> expression SEMI
Rule 14    expression_statement -> SEMI
Rule 15    block_statement -> LBRACE statement_list RBRACE
Rule 16    var_declaration -> VAR IDENT COLON type SEMI
Rule 17    var_declaration -> VAR IDENT COLON type ASSIGN expression SEMI
Rule 18    type -> TYPE
Rule 19    if_statement -> IF LPAREN expression RPAREN statement
Rule 20    if_statement -> IF LPAREN expression RPAREN statement ELSE statement
Rule 21    for_statement -> FOR LPAREN expression_statement expression_statement expression RPAREN statement
Rule 22    for_statement -> FOR LPAREN var_declaration expression_statement expression RPAREN statement
Rule 23    for_statement -> FOR LPAREN expression_statement expression_statement RPAREN statement
Rule 24    for_statement -> FOR LPAREN var_declaration expression_statement RPAREN statement
Rule 25    for_statement -> FOR LPAREN RPAREN statement
Rule 26    for_statement -> FOR statement
Rule 27    while_statement -> WHILE LPAREN expression RPAREN statement
Rule 28    print_statement -> PRINT LPAREN expression_list RPAREN SEMI
Rule 29    expression_list -> expression
Rule 30    expression_list -> expression_list COMMA expression
Rule 31    expression -> assignment_expression
Rule 32    expression -> logical_or_expression
Rule 33    assignment_expression -> IDENT ASSIGN expression
Rule 34    assignment_expression -> IDENT DECLARE expression
Rule 35    logical_or_expression -> logical_and_expression
Rule 36    logical_or_expression -> logical_or_expression OR logical_and_expression
Rule 37    logical_and_expression -> equality_expression
Rule 38    logical_and_expression -> logical_and_expression AND equality_expression
Rule 39    equality_expression -> relational_expression
Rule 40    equality_expression -> equality_expression EQ relational_expression
Rule 41    equality_expression -> equality_expression NE relational_expression
Rule 42    relational_expression -> additive_expression
Rule 43    relational_expression -> relational_expression LT additive_expression
Rule 44    relational_expression -> relational_expression LE additive_expression
Rule 45    relational_expression -> relational_expression GT additive_expression
Rule 46    relational_expression -> relational_expression GE additive_expression
Rule 47    additive_expression -> multiplicative_expression
Rule 48    additive_expression -> additive_expression PLUS multiplicative_expression
Rule 49    additive_expression -> additive_expression MINUS multiplicative_expression
Rule 50    multiplicative_expression -> unary_expression
Rule 51    multiplicative_expression -> multiplicative_expression TIMES unary_expression
Rule 52    multiplicative_expression -> multiplicative_expression DIVIDE unary_expression
Rule 53    multiplicative_expression -> multiplicative_expression MOD unary_expression
Rule 54    unary_expression -> primary_expression
Rule 55    unary_expression -> MINUS unary_expression
Rule 56    unary_expression -> NOT unary_expression
Rule 57    primary_expression -> IDENT
Rule 58    primary_expression -> NUMBER
Rule 59    primary_expression -> BOOL
Rule 60    primary_expression -> STRING
Rule 61    primary_expression -> LPAREN expression RPAREN
Rule 62    primary_expression -> IDENT LPAREN args RPAREN
Rule 63    args -> expression
Rule 64    args -> args COMMA expression
Rule 65    func_declaration -> FUNC IDENT LPAREN params RPAREN COLON type block_statement
Rule 66    func_declaration -> FUNC IDENT LPAREN RPAREN COLON type block_statement
Rule 67    func_declaration -> FUNC IDENT LPAREN params RPAREN block_statement
Rule 68    func_declaration -> FUNC IDENT LPAREN RPAREN block_statement
Rule 69    params -> param
Rule 70    params -> params COMMA param
Rule 71    param -> IDENT COLON type
Rule 72    return_statement -> RETURN expression SEMI
Rule 73    return_statement -> RETURN SEMI

Terminals, with rules where they appear

AND                  : 38
ASSIGN               : 17 33
BOOL                 : 59
COLON                : 16 17 65 66 71
COMMA                : 30 64 70
DECLARE              : 34
DIVIDE               : 52
ELSE                 : 20
EQ                   : 40
FOR                  : 21 22 23 24 25 26
FUNC                 : 65 66 67 68
GE                   : 46
GT                   : 45
IDENT                : 16 17 33 34 57 62 65 66 67 68 71
IF                   : 19 20
LBRACE               : 15
LE                   : 44
LPAREN               : 19 20 21 22 23 24 25 27 28 61 62 65 66 67 68
LT                   : 43
MINUS                : 49 55
MOD                  : 53
NE                   : 41
NOT                  : 56
NUMBER               : 58
OR                   : 36
PLUS                 : 48
PRINT                : 28
RBRACE               : 15
RETURN               : 72 73
RPAREN               : 19 20 21 22 23 24 25 27 28 61 62 65 66 67 68
SEMI                 : 13 14 16 17 28 72 73
STRING               : 60
TIMES                : 51
TYPE                 : 18
VAR                  : 16 17
WHILE                : 27
error                : 

Nonterminals, with rules where they appear

additive_expression  : 42 43 44 45 46 48 49
args                 : 62 64
assignment_expression : 31
block_statement      : 5 65 66 67 68
equality_expression  : 37 38 40 41
expression           : 13 17 19 20 21 22 27 29 30 33 34 61 63 64 72
expression_list      : 28 30
expression_statement : 4 21 21 22 23 23 24
for_statement        : 8
func_declaration     : 11
if_statement         : 7
logical_and_expression : 35 36 38
logical_or_expression : 32 36
multiplicative_expression : 47 48 49 51 52 53
param                : 69 70
params               : 65 67 70
primary_expression   : 54
print_statement      : 10
program              : 0
relational_expression : 39 40 41 43 44 45 46
return_statement     : 12
statement            : 2 3 19 20 20 21 22 23 24 25 26 27
statement_list       : 1 3 15
type                 : 16 17 65 66 71
unary_expression     : 50 51 52 53 55 56
var_declaration      : 6 22 24
while_statement      : 9

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statement_list
    (2) statement_list -> . statement
    (3) statement_list -> . statement_list statement
    (4) statement -> . expression_statement
    (5) statement -> . block_statement
    (6) statement -> . var_declaration
    (7) statement -> . if_statement
    (8) statement -> . for_statement
    (9) statement -> . while_statement
    (10) statement -> . print_statement
    (11) statement -> . func_declaration
    (12) statement -> . return_statement
    (13) expression_statement -> . expression SEMI
    (14) expression_statement -> . SEMI
    (15) block_statement -> . LBRACE statement_list RBRACE
    (16) var_declaration -> . VAR IDENT COLON type SEMI
    (17) var_declaration -> . VAR IDENT COLON type ASSIGN expression SEMI
    (19) if_statement -> . IF LPAREN expression RPAREN statement
    (20) if_statement -> . IF LPAREN expression RPAREN statement ELSE statement
    (21) for_statement -> . FOR LPAREN expression_statement expression_statement expression RPAREN statement
    (22) for_statement -> . FOR LPAREN var_declaration expression_statement expression RPAREN statement
    (23) for_statement -> . FOR LPAREN expression_statement expression_statement RPAREN statement
    (24) for_statement -> . FOR LPAREN var_declaration expression_statement RPAREN statement
    (25) for_statement -> . FOR LPAREN RPAREN statement
    (26) for_statement -> . FOR statement
    (27) while_statement -> . WHILE LPAREN expression RPAREN statement
    (28) print_statement -> . PRINT LPAREN expression_list RPAREN SEMI
    (65) func_declaration -> . FUNC IDENT LPAREN params RPAREN COLON type block_statement
    (66) func_declaration -> . FUNC IDENT LPAREN RPAREN COLON type block_statement
    (67) func_declaration -> . FUNC IDENT LPAREN params RPAREN block_statement
    (68) func_declaration -> . FUNC IDENT LPAREN RPAREN block_statement
    (72) return_statement -> . RETURN expression SEMI
    (73) return_statement -> . RETURN SEMI
    (31) expression -> . assignment_expression
    (32) expression -> . logical_or_expression
    (33) assignment_expression -> . IDENT ASSIGN expression
    (34) assignment_expression -> . IDENT DECLARE expression
    (35) logical_or_expression -> . logical_and_expression
    (36) logical_or_expression -> . logical_or_expression OR logical_and_expression
    (37) logical_and_expression -> . equality_expression
    (38) logical_and_expression -> . logical_and_expression AND equality_expression
    (39) equality_expression -> . relational_expression
    (40) equality_expression -> . equality_expression EQ relational_expression
    (41) equality_expression -> . equality_expression NE relational_expression
    (42) relational_expression -> . additive_expression
    (43) relational_expression -> . relational_expression LT additive_expression
    (44) relational_expression -> . relational_expression LE additive_expression
    (45) relational_expression -> . relational_expression GT additive_expression
    (46) relational_expression -> . relational_expression GE additive_expression
    (47) additive_expression -> . multiplicative_expression
    (48) additive_expression -> . additive_expression PLUS multiplicative_expression
    (49) additive_expression -> . additive_expression MINUS multiplicative_expression
    (50) multiplicative_expression -> . unary_expression
    (51) multiplicative_expression -> . multiplicative_expression TIMES unary_expression
    (52) multiplicative_expression -> . multiplicative_expression DIVIDE unary_expression
    (53) multiplicative_expression -> . multiplicative_expression MOD unary_expression
    (54) unary_expression -> . primary_expression
    (55) unary_expression -> . MINUS unary_expression
    (56) unary_expression -> . NOT unary_expression
    (57) primary_expression -> . IDENT
    (58) primary_expression -> . NUMBER
    (59) primary_expression -> . BOOL
    (60) primary_expression -> . STRING
    (61) primary_expression -> . LPAREN expression RPAREN
    (62) primary_expression -> . IDENT LPAREN args RPAREN

    SEMI            shift and go to state 14
    LBRACE          shift and go to state 15
    VAR             shift and go to state 16
    IF              shift and go to state 18
    FOR             shift and go to state 20
    WHILE           shift and go to state 21
    PRINT           shift and go to state 22
    FUNC            shift and go to state 23
    RETURN          shift and go to state 24
    IDENT           shift and go to state 17
    MINUS           shift and go to state 32
    NOT             shift and go to state 35
    NUMBER          shift and go to state 36
    BOOL            shift and go to state 37
    STRING          shift and go to state 38
    LPAREN          shift and go to state 19

    program                        shift and go to state 1
    statement_list                 shift and go to state 2
    statement                      shift and go to state 3
    expression_statement           shift and go to state 4
    block_statement                shift and go to state 5
    var_declaration                shift and go to state 6
    if_statement                   shift and go to state 7
    for_statement                  shift and go to state 8
    while_statement                shift and go to state 9
    print_statement                shift and go to state 10
    func_declaration               shift and go to state 11
    return_statement               shift and go to state 12
    expression                     shift and go to state 13
    assignment_expression          shift and go to state 25
    logical_or_expression          shift and go to state 26
    logical_and_expression         shift and go to state 27
    equality_expression            shift and go to state 28
    relational_expression          shift and go to state 29
    additive_expression            shift and go to state 30
    multiplicative_expression      shift and go to state 31
    unary_expression               shift and go to state 33
    primary_expression             shift and go to state 34

state 1

    (0) S' -> program .



state 2

    (1) program -> statement_list .
    (3) statement_list -> statement_list . statement
    (4) statement -> . expression_statement
    (5) statement -> . block_statement
    (6) statement -> . var_declaration
    (7) statement -> . if_statement
    (8) statement -> . for_statement
    (9) statement -> . while_statement
    (10) statement -> . print_statement
    (11) statement -> . func_declaration
    (12) statement -> . return_statement
    (13) expression_statement -> . expression SEMI
    (14) expression_statement -> . SEMI
    (15) block_statement -> . LBRACE statement_list RBRACE
    (16) var_declaration -> . VAR IDENT COLON type SEMI
    (17) var_declaration -> . VAR IDENT COLON type ASSIGN expression SEMI
    (19) if_statement -> . IF LPAREN expression RPAREN statement
    (20) if_statement -> . IF LPAREN expression RPAREN statement ELSE statement
    (21) for_statement -> . FOR LPAREN expression_statement expression_statement expression RPAREN statement
    (22) for_statement -> . FOR LPAREN var_declaration expression_statement expression RPAREN statement
    (23) for_statement -> . FOR LPAREN expression_statement expression_statement RPAREN statement
    (24) for_statement -> . FOR LPAREN var_declaration expression_statement RPAREN statement
    (25) for_statement -> . FOR LPAREN RPAREN statement
    (26) for_statement -> . FOR statement
    (27) while_statement -> . WHILE LPAREN expression RPAREN statement
    (28) print_statement -> . PRINT LPAREN expression_list RPAREN SEMI
    (65) func_declaration -> . FUNC IDENT LPAREN params RPAREN COLON type block_statement
    (66) func_declaration -> . FUNC IDENT LPAREN RPAREN COLON type block_statement
    (67) func_declaration -> . FUNC IDENT LPAREN params RPAREN block_statement
    (68) func_declaration -> . FUNC IDENT LPAREN RPAREN block_statement
    (72) return_statement -> . RETURN expression SEMI
    (73) return_statement -> . RETURN SEMI
    (31) expression -> . assignment_expression
    (32) expression -> . logical_or_expression
    (33) assignment_expression -> . IDENT ASSIGN expression
    (34) assignment_expression -> . IDENT DECLARE expression
    (35) logical_or_expression -> . logical_and_expression
    (36) logical_or_expression -> . logical_or_expression OR logical_and_expression
    (37) logical_and_expression -> . equality_expression
    (38) logical_and_expression -> . logical_and_expression AND equality_expression
    (39) equality_expression -> . relational_expression
    (40) equality_expression -> . equality_expression EQ relational_expression
    (41) equality_expression -> . equality_expression NE relational_expression
    (42) relational_expression -> . additive_expression
    (43) relational_expression -> . relational_expression LT additive_expression
    (44) relational_expression -> . relational_expression LE additive_expression
    (45) relational_expression -> . relational_expression GT additive_expression
    (46) relational_expression -> . relational_expression GE additive_expression
    (47) additive_expression -> . multiplicative_expression
    (48) additive_expression -> . additive_expression PLUS multiplicative_expression
    (49) additive_expression -> . additive_expression MINUS multiplicative_expression
    (50) multiplicative_expression -> . unary_expression
    (51) multiplicative_expression -> . multiplicative_expression TIMES unary_expression
    (52) multiplicative_expression -> . multiplicative_expression DIVIDE unary_expression
    (53) multiplicative_expression -> . multiplicative_expression MOD unary_expression
    (54) unary_expression -> . primary_expression
    (55) unary_expression -> . MINUS unary_expression
    (56) unary_expression -> . NOT unary_expression
    (57) primary_expression -> . IDENT
    (58) primary_expression -> . NUMBER
    (59) primary_expression -> . BOOL
    (60) primary_expression -> . STRING
    (61) primary_expression -> . LPAREN expression RPAREN
    (62) primary_expression -> . IDENT LPAREN args RPAREN

    $end            reduce using rule 1 (program -> statement_list .)
    SEMI            shift and go to state 14
    LBRACE          shift and go to state 15
    VAR             shift and go to state 16
    IF              shift and go to state 18
    FOR             shift and go to state 20
    WHILE           shift and go to state 21
    PRINT           shift and go to state 22
    FUNC            shift and go to state 23
    RETURN          shift and go to state 24
    IDENT           shift and go to state 17
    MINUS           shift and go to state 32
    NOT             shift and go to state 35
    NUMBER          shift and go to state 36
    BOOL            shift and go to state 37
    STRING          shift and go to state 38
    LPAREN          shift and go to state 19

    statement                      shift and go to state 39
    expression_statement           shift and go to state 4
    block_statement                shift and go to state 5
    var_declaration                shift and go to state 6
    if_statement                   shift and go to state 7
    for_statement                  shift and go to state 8
    while_statement                shift and go to state 9
    print_statement                shift and go to state 10
    func_declaration               shift and go to state 11
    return_statement               shift and go to state 12
    expression                     shift and go to state 13
    assignment_expression          shift and go to state 25
    logical_or_expression          shift and go to state 26
    logical_and_expression         shift and go to state 27
    equality_expression            shift and go to state 28
    relational_expression          shift and go to state 29
    additive_expression            shift and go to state 30
    multiplicative_expression      shift and go to state 31
    unary_expression               shift and go to state 33
    primary_expression             shift and go to state 34

state 3

    (2) statement_list -> statement .

    SEMI            reduce using rule 2 (statement_list -> statement .)
    LBRACE          reduce using rule 2 (statement_list -> statement .)
    VAR             reduce using rule 2 (statement_list -> statement .)
    IF              reduce using rule 2 (statement_list -> statement .)
    FOR             reduce using rule 2 (statement_list -> statement .)
    WHILE           reduce using rule 2 (statement_list -> statement .)
    PRINT           reduce using rule 2 (statement_list -> statement .)
    FUNC            reduce using rule 2 (statement_list -> statement .)
    RETURN          reduce using rule 2 (statement_list -> statement .)
    IDENT           reduce using rule 2 (statement_list -> statement .)
    MINUS           reduce using rule 2 (statement_list -> statement .)
    NOT             reduce using rule 2 (statement_list -> statement .)
    NUMBER          reduce using rule 2 (statement_list -> statement .)
    BOOL            reduce using rule 2 (statement_list -> statement .)
    STRING          reduce using rule 2 (statement_list -> statement .)
    LPAREN          reduce using rule 2 (statement_list -> statement .)
    $end            reduce using rule 2 (statement_list -> statement .)
    RBRACE          reduce using rule 2 (statement_list -> statement .)


state 4

    (4) statement -> expression_statement .

    SEMI            reduce using rule 4 (statement -> expression_statement .)
    LBRACE          reduce using rule 4 (statement -> expression_statement .)
    VAR             reduce using rule 4 (statement -> expression_statement .)
    IF              reduce using rule 4 (statement -> expression_statement .)
    FOR             reduce using rule 4 (statement -> expression_statement .)
    WHILE           reduce using rule 4 (statement -> expression_statement .)
    PRINT           reduce using rule 4 (statement -> expression_statement .)
    FUNC            reduce using rule 4 (statement -> expression_statement .)
    RETURN          reduce using rule 4 (statement -> expression_statement .)
    IDENT           reduce using rule 4 (statement -> expression_statement .)
    MINUS           reduce using rule 4 (statement -> expression_statement .)
    NOT             reduce using rule 4 (statement -> expression_statement .)
    NUMBER          reduce using rule 4 (statement -> expression_statement .)
    BOOL            reduce using rule 4 (statement -> expression_statement .)
    STRING          reduce using rule 4 (statement -> expression_statement .)
    LPAREN          reduce using rule 4 (statement -> expression_statement .)
    $end            reduce using rule 4 (statement -> expression_statement .)
    RBRACE          reduce using rule 4 (statement -> expression_statement .)
    ELSE            reduce using rule 4 (statement -> expression_statement .)


state 5

    (5) statement -> block_statement .

    SEMI            reduce using rule 5 (statement -> block_statement .)
    LBRACE          reduce using rule 5 (statement -> block_statement .)
    VAR             reduce using rule 5 (statement -> block_statement .)
    IF              reduce using rule 5 (statement -> block_statement .)
    FOR             reduce using rule 5 (statement -> block_statement .)
    WHILE           reduce using rule 5 (statement -> block_statement .)
    PRINT           reduce using rule 5 (statement -> block_statement .)
    FUNC            reduce using rule 5 (statement -> block_statement .)
    RETURN          reduce using rule 5 (statement -> block_statement .)
    IDENT           reduce using rule 5 (statement -> block_statement .)
    MINUS           reduce using rule 5 (statement -> block_statement .)
    NOT             reduce using rule 5 (statement -> block_statement .)
    NUMBER          reduce using rule 5 (statement -> block_statement .)
    BOOL            reduce using rule 5 (statement -> block_statement .)
    STRING          reduce using rule 5 (statement -> block_statement .)
    LPAREN          reduce using rule 5 (statement -> block_statement .)
    $end            reduce using rule 5 (statement -> block_statement .)
    RBRACE          reduce using rule 5 (statement -> block_statement .)
    ELSE            reduce using rule 5 (statement -> block_statement .)


state 6

    (6) statement -> var_declaration .

    SEMI            reduce using rule 6 (statement -> var_declaration .)
    LBRACE          reduce using rule 6 (statement -> var_declaration .)
    VAR             reduce using rule 6 (statement -> var_declaration .)
    IF              reduce using rule 6 (statement -> var_declaration .)
    FOR             reduce using rule 6 (statement -> var_declaration .)
    WHILE           reduce using rule 6 (statement -> var_declaration .)
    PRINT           reduce using rule 6 (statement -> var_declaration .)
    FUNC            reduce using rule 6 (statement -> var_declaration .)
    RETURN          reduce using rule 6 (statement -> var_declaration .)
    IDENT           reduce using rule 6 (statement -> var_declaration .)
    MINUS           reduce using rule 6 (statement -> var_declaration .)
    NOT             reduce using rule 6 (statement -> var_declaration .)
    NUMBER          reduce using rule 6 (statement -> var_declaration .)
    BOOL            reduce using rule 6 (statement -> var_declaration .)
    STRING          reduce using rule 6 (statement -> var_declaration .)
    LPAREN          reduce using rule 6 (statement -> var_declaration .)
    $end            reduce using rule 6 (statement -> var_declaration .)
    RBRACE          reduce using rule 6 (statement -> var_declaration .)
    ELSE            reduce using rule 6 (statement -> var_declaration .)


state 7

    (7) statement -> if_statement .

    SEMI            reduce using rule 7 (statement -> if_statement .)
    LBRACE          reduce using rule 7 (statement -> if_statement .)
    VAR             reduce using rule 7 (statement -> if_statement .)
    IF              reduce using rule 7 (statement -> if_statement .)
    FOR             reduce using rule 7 (statement -> if_statement .)
    WHILE           reduce using rule 7 (statement -> if_statement .)
    PRINT           reduce using rule 7 (statement -> if_statement .)
    FUNC            reduce using rule 7 (statement -> if_statement .)
    RETURN          reduce using rule 7 (statement -> if_statement .)
    IDENT           reduce using rule 7 (statement -> if_statement .)
    MINUS           reduce using rule 7 (statement -> if_statement .)
    NOT             reduce using rule 7 (statement -> if_statement .)
    NUMBER          reduce using rule 7 (statement -> if_statement .)
    BOOL            reduce using rule 7 (statement -> if_statement .)
    STRING          reduce using rule 7 (statement -> if_statement .)
    LPAREN          reduce using rule 7 (statement -> if_statement .)
    $end            reduce using rule 7 (statement -> if_statement .)
    RBRACE          reduce using rule 7 (statement -> if_statement .)
    ELSE            reduce using rule 7 (statement -> if_statement .)


state 8

    (8) statement -> for_statement .

    SEMI            reduce using rule 8 (statement -> for_statement .)
    LBRACE          reduce using rule 8 (statement -> for_statement .)
    VAR             reduce using rule 8 (statement -> for_statement .)
    IF              reduce using rule 8 (statement -> for_statement .)
    FOR             reduce using rule 8 (statement -> for_statement .)
    WHILE           reduce using rule 8 (statement -> for_statement .)
    PRINT           reduce using rule 8 (statement -> for_statement .)
    FUNC            reduce using rule 8 (statement -> for_statement .)
    RETURN          reduce using rule 8 (statement -> for_statement .)
    IDENT           reduce using rule 8 (statement -> for_statement .)
    MINUS           reduce using rule 8 (statement -> for_statement .)
    NOT             reduce using rule 8 (statement -> for_statement .)
    NUMBER          reduce using rule 8 (statement -> for_statement .)
    BOOL            reduce using rule 8 (statement -> for_statement .)
    STRING          reduce using rule 8 (statement -> for_statement .)
    LPAREN          reduce using rule 8 (statement -> for_statement .)
    $end            reduce using rule 8 (statement -> for_statement .)
    RBRACE          reduce using rule 8 (statement -> for_statement .)
    ELSE            reduce using rule 8 (statement -> for_statement .)


state 9

    (9) statement -> while_statement .

    SEMI            reduce using rule 9 (statement -> while_statement .)
    LBRACE          reduce using rule 9 (statement -> while_statement .)
    VAR             reduce using rule 9 (statement -> while_statement .)
    IF              reduce using rule 9 (statement -> while_statement .)
    FOR             reduce using rule 9 (statement -> while_statement .)
    WHILE           reduce using rule 9 (statement -> while_statement .)
    PRINT           reduce using rule 9 (statement -> while_statement .)
    FUNC            reduce using rule 9 (statement -> while_statement .)
    RETURN          reduce using rule 9 (statement -> while_statement .)
    IDENT           reduce using rule 9 (statement -> while_statement .)
    MINUS           reduce using rule 9 (statement -> while_statement .)
    NOT             reduce using rule 9 (statement -> while_statement .)
    NUMBER          reduce using rule 9 (statement -> while_statement .)
    BOOL            reduce using rule 9 (statement -> while_statement .)
    STRING          reduce using rule 9 (statement -> while_statement .)
    LPAREN          reduce using rule 9 (statement -> while_statement .)
    $end            reduce using rule 9 (statement -> while_statement .)
    RBRACE          reduce using rule 9 (statement -> while_statement .)
    ELSE            reduce using rule 9 (statement -> while_statement .)


state 10

    (10) statement -> print_statement .
